--- a/.github/workflows/InfrastructureDeployment.yml
+++ b/.github/workflows/InfrastructureDeployment.yml
@@ -30,5 +30,5 @@ jobs:
       with:
         terraform_wrapper: false
     - name: Terraform Init
-      run: terraform init
+      run: terraform init -backend-config=backend.conf
       working-directory: ./terraform
