--- a/terraform/backend.conf
+++ b/terraform/backend.conf
@@ -1,4 +1,4 @@
-access_key = ${var.AZURE_ACCESS_KEY}
-storage_account_name = ${var.AZURE_STORAGE_ACCOUNT_NAME}
-container_name       = ${var.AZURE_CONTAINER_NAME}
+access_key = var.AZURE_ACCESS_KEY
+storage_account_name = var.AZURE_STORAGE_ACCOUNT_NAME
+container_name       = var.AZURE_CONTAINER_NAME
 key                  = "terraform.tfstate"
